Fixed error with signDetails not wrapping all childs height

--- a/frontend/src/pages/SignsPage/SignDetailsPanel/SignDetailsPanel.css
+++ b/frontend/src/pages/SignsPage/SignDetailsPanel/SignDetailsPanel.css
@@ -31,9 +31,6 @@
   display:flex;
   flex-direction: column;
   gap: var(--space-6);
-
-  flex: 1;
-  min-height: 0;
 }
 
 .stickyBar {
